# kingship-users-boilerplate

./: README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  Dockerfile copy  entrypoint.sh  requirements.txt
app/cf/: settings.py  urls.py
app/static/css/: styles.css
app/static/js/: app.js
app/users/: backends.py  forms.py  models.py  tasks.py  tokens.py  user_permissions.py
app/users/migrations/: 0001_initial.py  0002_remove_user_department_remove_user_location_and_more.py
nginx/: Dockerfile  nginx.conf
